--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -323,7 +323,7 @@ body {
 .rotate-img { display: none; }
 
 .hero {
-  background-image: url("../images/hero-bg.jpg");
+  background-image: url("../images/hero-bg2.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
